--- a/.env.production
+++ b/.env.production
@@ -8,5 +8,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=515869803623
 VITE_FIREBASE_APP_ID=1:515869803623:web:49df2d09ef08dbf36880c2
 VITE_FIREBASE_MEASUREMENT_ID=G-1BPQS07WR0
 
-# Backend API URL (Production) - Will be updated after backend deployment
+# Backend API URL (Production)
 VITE_API_BASE=https://crypto-premium-backend.vercel.app
