--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,10 @@
   "name": "crypto-stego-lab-backend",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js",
-    "start:firebase": "node index.js",
+    "start": "node index.js",
+    "dev": "node index.js",
     "build": "echo 'No build step required'",
     "vercel-build": "echo 'No build step required'"
   },
@@ -16,7 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase-admin": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0"
   }
